Bugfix: Subscription form title has undesired line break in mobile devices

--- a/resources/css/livewire/site-footer.css
+++ b/resources/css/livewire/site-footer.css
@@ -56,7 +56,10 @@
 {
 	@apply mb-5;
 	@apply text-gray-800;
-	@apply text-2xl xl:text-3xl font-bold;
+	@apply text-justify xl:text-left;
+	@apply text-2xl xl:text-3xl;
+	@apply font-bold;
+	@apply xl:text-balance;
 }
 
 .site-footer .subscription-form form
